--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "causes/apple_ads",
-    "type": "project",
+    "type": "library",
     "license": "MIT",
     "authors": [
         {
@@ -9,5 +9,14 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php": ">=5.3.0",
+        "guzzlehttp/guzzle": "~3.7",
+        "composer-runtime-api": "^2.0"
+    },
+    "autoload": {
+        "psr-0": {
+            "Causes\\AppleAds\\": "src/"
+        }
+    }
 }
